# OS-Dev

./: .gitignore  Cargo.toml  Makefile.toml  README.md
apps/graphics_demo/: Cargo.toml
apps/graphics_demo/src/: bmp_hhu.rs  graphics_demo.rs
apps/heap_demo/: Cargo.toml
apps/heap_demo/src/: heap_demo.rs
apps/hello/src/: hello.rs
apps/keyboard_demo/: Cargo.toml  Makefile.toml
apps/keyboard_demo/src/: keyboard_demo.rs
apps/shell/: Cargo.toml
apps/shell/src/: shell.rs
apps/sound_aero/: Cargo.toml
apps/sound_aero/src/: sound_aero.rs
apps/sound_demo/: Cargo.toml
apps/sound_demo/src/: sound_demo.rs
apps/sound_tetris/: Cargo.toml
apps/sound_tetris/src/: sound_tetris.rs
apps/sync_spin_demo/: Cargo.toml  Makefile.toml
apps/sync_spin_demo/src/: sync_spin_demo.rs
apps/text_demo/: Cargo.toml
apps/text_demo/src/: text_demo.rs
apps/thread_yield_demo/: Cargo.toml
apps/thread_yield_demo/src/: thread_yield_demo.rs
apps/uptime_app/: Cargo.toml
apps/uptime_app/src/: uptime_app.rs
apps/vmatest/: Cargo.toml  Makefile.toml
apps/vmatest/src/: vmatest.rs
os/: Cargo.toml  Makefile.toml
os/src/: consts.rs  startup.rs
os/src/boot/: boot.asm  grub.cfg
os/src/devices/: buff_print.rs  cga.rs  cga_print.rs  keyboard.rs  lfb.rs  lfb_print.rs  mod.rs  pci.rs  pcspk.rs  pit.rs
os/src/kernel/: allocator.rs  cpu.rs  mod.rs  multiboot.rs
os/src/kernel/allocator/: bump.rs  list.rs
os/src/kernel/coroutines/: coroutine.rs
os/src/kernel/interrupts/: idt.rs  mod.rs  (+2 more)
os/src/user/: mod.rs
usrlib/src/: allocator.rs  lib.rs  spinlock.rs  user_api.rs
(+35 files in other folders)
